feature:채팅 초석마련